test/fail_compilation/imports/test314a.d
private static import std.stdio;
